<resources>
    <string name="app_name">Musikverein Leopoldsdorf</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Öffnen</string>
    <string name="navigation_drawer_close">Schließen</string>

    <string name="action_settings">Einstellungen</string>
    <string name="mitglieder">Mitglieder</string>
    <string name="vorstand">Vorstand</string>
    <string name="preise">Preise</string>
    <string name="termine">Termine</string>
    <string name="stuecke">Stücke</string>
    <string name="title_activity_settings">Einstellungen</string>
    <string name="title_activity_einstellungen">Einstellungen</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="set_network">Netzwerk</string>
    <string name="set_appearance">Darstellung</string>

    <string name="set_link_termine">Link zu den Terminen</string>
    <string name="set_link_vorstand">Link zum Vorstand</string>
    <string name="set_link_mitglieder">Link zu den Mitgliedern</string>
    <string name="set_link_stuecke">Link zu den Stücken</string>
    <string name="set_link_preise">Link zu den Preisen</string>

    <string name="set_link_termine_def">http://192.168.0.5/query/termine.json</string>
    <string name="set_link_vorstand_def">http://192.168.0.5/query/vorstand.json</string>
    <string name="set_link_mitglieder_def">http://192.168.0.5/query/mitglieder.json</string>
    <string name="set_link_stuecke_def">http://192.168.0.5/query/buecher.json</string>
    <string name="set_link_preise_def">http://192.168.0.5/query/preuse.json</string>

    <string name="set_appearance_dateformat">Datumsformat</string>

    <string name="set_appearance_dateformat_def">EE d. MMM yyyy HH:mm</string>

    <string name="refresh">Aktualisieren</string>
    <string name="delete_cache">Zwischenspeicher leeren</string>



    <string name="termin_treffpunk">Treffpunkt:</string>
    <string name="termin_dauer">Dauer:</string>
    <string name="termin_beginn">Beginn:</string>
    <string name="termin_beschreibung">Beschreibung:</string>
    <string name="termin_adjustierung">Adjustierung:</string>

    <string name="stueck_suche_text">Suche:</string>

</resources>
