<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_stuecke"
            android:icon="@android:drawable/ic_menu_camera"
            android:title="@string/stuecke" />
        <item
            android:id="@+id/nav_mitglieder"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/mitglieder" />
        <item
            android:id="@+id/nav_vorstand"
            android:icon="@android:drawable/ic_menu_slideshow"
            android:title="@string/vorstand" />
        <item
            android:id="@+id/nav_termine"
            android:icon="@android:drawable/ic_menu_manage"
            android:title="@string/termine" />
        <item
            android:id="@+id/nav_preise"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/preise" />
    </group>

</menu>