<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/termin_name_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="Medium Text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/termin_treffpunkt_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/termin_name_content"
        android:text="@string/termin_treffpunk"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_treffpunkt_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/termin_treffpunkt_desc"
        android:layout_centerHorizontal="true"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_beginn_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/termin_treffpunkt_desc"
        android:text="@string/termin_beginn"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_beginn_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/termin_treffpunkt_content"
        android:layout_alignStart="@+id/termin_treffpunkt_content"
        android:layout_below="@+id/termin_treffpunkt_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_adjustierung_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/termin_beginn_desc"
        android:text="@string/termin_adjustierung"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_adjustierung_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/termin_beginn_content"
        android:layout_alignStart="@+id/termin_beginn_content"
        android:layout_below="@+id/termin_beginn_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_dauer_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/termin_adjustierung_desc"
        android:text="@string/termin_dauer"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_dauer_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/termin_adjustierung_content"
        android:layout_alignStart="@+id/termin_adjustierung_content"
        android:layout_below="@+id/termin_adjustierung_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_beschreibung_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/termin_dauer_desc"
        android:text="@string/termin_beschreibung"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/termin_beschreibung_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/termin_dauer_content"
        android:layout_alignStart="@+id/termin_dauer_content"
        android:layout_below="@+id/termin_dauer_content"
        android:text="Small Text"
        android:textAppearance="?android:attr/textAppearanceSmall" />
</RelativeLayout>